// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeratorSettings matches the last snapshot 1`] = `
<FlatList
  ListHeaderComponent={
    <View>
      <Text>
        Group Time
      </Text>
      <View>
        <ForwardRef
          onPress={[Function]}
        >
          <Text>
            <Icon
              green={true}
              name="Plus"
            />
             Add New
          </Text>
        </ForwardRef>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 10,
        "name": "John Current",
      },
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 11,
        "name": "John Other",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`ModeratorSettings renders ModeratorRow 1`] = `
<ForwardRef
  onPress={[Function]}
>
  <Avatar
    avatarUrl="http://aurl.com"
  />
  <Text>
    John Current
  </Text>
  <ForwardRef
    hitSlop={
      Object {
        "bottom": 15,
        "left": 10,
        "right": 10,
        "top": 15,
      }
    }
    onPress={[Function]}
  >
    <Text>
      Remove
    </Text>
  </ForwardRef>
</ForwardRef>
`;

exports[`ModeratorSettings renders ModeratorRow without removeModerator 1`] = `
<ForwardRef
  onPress={[Function]}
>
  <Avatar
    avatarUrl="http://aurl.com"
  />
  <Text>
    John Current
  </Text>
</ForwardRef>
`;

exports[`ModeratorSettings shows the Search component appropriately 1`] = `
<RCTScrollView
  ListHeaderComponent={
    <View>
      <Text>
        Group Time
      </Text>
      <View>
        <ForwardRef
          onPress={[Function]}
        >
          <Text>
            <Icon
              green={true}
              name="Plus"
            />
             Add New
          </Text>
        </ForwardRef>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 10,
        "name": "John Current",
      },
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 11,
        "name": "John Other",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View>
        <Text>
          Group Time
        </Text>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              <Icon
                green={true}
                name="Plus"
              />
               Add New
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View>
          <Image
            source={
              Object {
                "uri": "http://aurl.com",
              }
            }
          />
        </View>
        <Text>
          John Current
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View>
          <Image
            source={
              Object {
                "uri": "http://aurl.com",
              }
            }
          />
        </View>
        <Text>
          John Other
        </Text>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 10,
              "right": 10,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            Remove
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
